--- a/Stocky.Client/Components/DialogWindows/PocketDialogs/PocketsUserPaginationDialog.razor
+++ b/Stocky.Client/Components/DialogWindows/PocketDialogs/PocketsUserPaginationDialog.razor
@@ -6,6 +6,7 @@
 @inject HttpClient Http
 @inject IDialogService DialogService
 @inject AuthService AuthService
+@inject IConfiguration Configuration
 
 @if (_isLoading)
 {
@@ -60,6 +61,7 @@ else
     private int _totalPages = 1;
     private const int PageSize = 15;
     private bool _isLoading;
+    private string ApiBaseUrl => Configuration["ApiBaseUrl"];
 
     protected override async Task OnInitializedAsync()
     {
@@ -72,7 +74,7 @@ else
 
         try
         {
-            var url = $"http://localhost:5191/Pocket/GetPocketsByUserId?UserId={UserId}&Page={_currentPage}&PageSize={PageSize}";
+            var url = $"{ApiBaseUrl}/Pocket/GetPocketsByUserId?UserId={UserId}&Page={_currentPage}&PageSize={PageSize}";
             var request = new HttpRequestMessage(HttpMethod.Get, url);
             request.Headers.Authorization = new AuthenticationHeaderValue("Bearer", AuthService.Token);
 
