--- a/Stocky.Client/Components/DialogWindows/ProductDialogs/DeleteProductDialog.razor
+++ b/Stocky.Client/Components/DialogWindows/ProductDialogs/DeleteProductDialog.razor
@@ -1,4 +1,5 @@
 @inject HttpClient Http
+@inject IConfiguration Configuration
 
 <MudDialog>
     <DialogContent>
@@ -31,6 +32,7 @@
     [Parameter] public Color Color { get; set; } = Color.Error;
 
     private bool _isLoading = false;
+    private string ApiBaseUrl => Configuration["ApiBaseUrl"];
 
     private void Cancel() => MudDialog.Cancel();
 
@@ -40,7 +42,7 @@
 
         try
         {
-            var url = $"http://localhost:5191/Product/DeleteUser?Id={ProductId}";
+            var url = $"{ApiBaseUrl}Product/DeleteUser?Id={ProductId}";
             var response = await Http.DeleteAsync(url);
 
             if (response.IsSuccessStatusCode)
