--- a/Stocky.Client/Components/DialogWindows/UserDialogs/DeleteUserDialog.razor
+++ b/Stocky.Client/Components/DialogWindows/UserDialogs/DeleteUserDialog.razor
@@ -2,6 +2,7 @@
 @using MudBlazor.Components.Service
 @inject HttpClient Http
 @inject AuthService AuthService
+@inject IConfiguration Configuration
 
 <MudDialog>
     <DialogContent>
@@ -20,6 +21,7 @@
     [Parameter] public string ContentText { get; set; } = "Вы уверены?";
     [Parameter] public string ButtonText { get; set; } = "ОК";
     [Parameter] public Color Color { get; set; } = Color.Primary;
+    private string ApiBaseUrl => Configuration["ApiBaseUrl"];
 
     private bool _isLoading;
     private void Cancel() => MudDialog.Cancel();
@@ -29,7 +31,7 @@
         _isLoading = true;
         try
         {
-            var url = $"http://localhost:5191/User/DeleteUser?Id={UserId}";
+            var url = $"{ApiBaseUrl}/User/DeleteUser?Id={UserId}";
             var request = new HttpRequestMessage(HttpMethod.Delete, url);
 
             request.Headers.Authorization = new AuthenticationHeaderValue("Bearer", AuthService.Token);
