--- a/Stocky.Client/Components/Pages/QrGenerator.razor
+++ b/Stocky.Client/Components/Pages/QrGenerator.razor
@@ -2,8 +2,6 @@
 @using System.Text
 @using Append.Blazor.Printing
 @using QRCoder
-@using Microsoft.JSInterop
-@inject IJSRuntime JS
 @using Color = MudBlazor.Color
 @inject IPrintingService PrintingService
 
@@ -29,26 +27,26 @@
 </MudPaper>
 
 @code {
-    private string Login { get; set; }
-    private string Password { get; set; }
-    private string QRCodeBase64 { get; set; }
+    private string? Login { get; set; }
+    private string? Password { get; set; }
+    private string? QRCodeBase64 { get; set; }
 
     private async Task GenerateQRCode()
     {
         if (!string.IsNullOrWhiteSpace(Login) && !string.IsNullOrWhiteSpace(Password))
         {
-            string combined = $"{Login}|{Password}";
-            string base64Data = Convert.ToBase64String(Encoding.UTF8.GetBytes(combined));
+            var combined = $"{Login}|{Password}";
+            var base64Data = Convert.ToBase64String(Encoding.UTF8.GetBytes(combined));
 
             using var qrGenerator = new QRCodeGenerator();
             using var qrCodeData = qrGenerator.CreateQrCode(base64Data, QRCodeGenerator.ECCLevel.Q);
             using var qrCode = new PngByteQRCode(qrCodeData);
-            byte[] qrCodeBytes = qrCode.GetGraphic(20);
+            var qrCodeBytes = qrCode.GetGraphic(20);
 
             var qr = Convert.ToBase64String(qrCodeBytes);
 
-            string rawHtml = $@"<img src=""data:image/png;base64,{qr}"" style=""width:59mm;height:59mm;""/>";
-//sometimes need to wait for JS to be ready
+            var rawHtml = $"""<img src="data:image/png;base64,{qr}" style="width:59mm;height:59mm;"/>""";
+            //sometimes need to wait for JS to be ready
             await Task.Delay(00);
             await PrintingService.Print(rawHtml, PrintType.RawHtml);
         }
